# flicker

./: .gitignore  LICENSE  README.md  meson.build  windows_build.bat
asset/mesh/: cube.stl  cube.vertex  map1.blend  map1.stl  map1.vertex  monkey.blend  monkey.stl  monkey.vertex
asset/shader/main/: shader.frag  shader.vert
include/common/: linmath.h
include/game/: io.h
include/graphics/: engine.h  graphics.h  io.h  vertex.h
include/platform/: platform.h
include/window/: window.h
script/: create_meshes.py
src/common/: linmath.c
src/game/: io.c  main.c
src/graphics/: engine.c  graphics.c  io.c  resource.c  vertex.c
src/platform/: xcb.c
src/window/: win32.c
